test/string/error_after_multiline.lox
// Tests that we correctly track the line info across multiline strings.
var a = "1
2
3
";

// This test doens't work with my testing
err; // error: cannot find variable